// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is self renders for Cru Community 1`] = `
<Flex>
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <CenteredIconButtonWithText
      buttonStyle={
        Object {
          "color": "#ffffff",
        }
      }
      icon="journeyIcon"
      key="some key"
      onClick={[Function]}
      text="Stage"
      wrapperStyle={
        Object {
          "backgroundColor": "#FF5532",
        }
      }
    />
  </Flex>
</Flex>
`;

exports[`is self renders for User Created Community 1`] = `
<Flex>
  <Connect(Translate(AssignStageButton))
    organization={
      Object {
        "id": "50",
      }
    }
    person={
      Object {
        "first_name": "Roge",
        "id": "1002",
      }
    }
    selectMyStage={[Function]}
    selectPersonStage={[Function]}
  />
</Flex>
`;

exports[`isContact with contact assignment does not render status button if contact is not part of org 1`] = `
<Flex>
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <CenteredIconButtonWithText
      icon="journeyIcon"
      key="some key"
      onClick={[Function]}
      text="Stage"
    />
    <CenteredIconButtonWithText
      icon="textIcon"
      key="some key"
      text="Message"
    />
    <CenteredIconButtonWithText
      icon="callIcon"
      key="some key"
      text="Call"
    />
    <CenteredIconButtonWithText
      buttonStyle={
        Object {
          "fontSize": 20,
        }
      }
      icon="emailIcon"
      key="some key"
      text="Email"
    />
  </Flex>
</Flex>
`;

exports[`isContact with contact assignment renders no contact buttons if not Cru Org 1`] = `
<Flex>
  <Connect(Translate(AssignStageButton))
    organization={
      Object {
        "id": "50",
      }
    }
    person={
      Object {
        "first_name": "Roge",
        "id": "1002",
      }
    }
    selectMyStage={[Function]}
    selectPersonStage={[Function]}
  />
</Flex>
`;

exports[`isContact with contact assignment renders status button if contact is part of org 1`] = `
<Flex>
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <CenteredIconButtonWithText
      icon="journeyIcon"
      key="some key"
      onClick={[Function]}
      text="Stage"
    />
    <CenteredIconButtonWithText
      icon="journeyWarning"
      key="some key"
      onClick={[Function]}
      text="Status"
    />
    <CenteredIconButtonWithText
      icon="textIcon"
      key="some key"
      text="Message"
    />
    <CenteredIconButtonWithText
      icon="callIcon"
      key="some key"
      text="Call"
    />
    <CenteredIconButtonWithText
      buttonStyle={
        Object {
          "fontSize": 20,
        }
      }
      icon="emailIcon"
      key="some key"
      text="Email"
    />
  </Flex>
</Flex>
`;

exports[`isContact with no contact assignment renders with no contact assignment 1`] = `
<Flex>
  <Connect(Translate(AssignToMeButton))
    organization={
      Object {
        "id": "50",
      }
    }
    person={
      Object {
        "first_name": "Roge",
        "id": "1002",
      }
    }
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  />
</Flex>
`;

exports[`isMember has contact info and contact assignment renders for Cru Community 1`] = `
<Flex>
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <CenteredIconButtonWithText
      icon="journeyIcon"
      key="some key"
      onClick={[Function]}
      text="Stage"
    />
    <CenteredIconButtonWithText
      icon="textIcon"
      key="some key"
      onClick={[Function]}
      text="Message"
    />
    <CenteredIconButtonWithText
      icon="callIcon"
      key="some key"
      onClick={[Function]}
      text="Call"
    />
    <CenteredIconButtonWithText
      buttonStyle={
        Object {
          "fontSize": 20,
        }
      }
      icon="emailIcon"
      key="some key"
      onClick={[Function]}
      text="Email"
    />
  </Flex>
</Flex>
`;

exports[`isMember has contact info and contact assignment renders for User-Created Community 1`] = `
<Flex>
  <Connect(Translate(AssignStageButton))
    organization={
      Object {
        "id": "50",
      }
    }
    person={
      Object {
        "first_name": "Roge",
        "id": "1002",
      }
    }
    selectMyStage={[Function]}
    selectPersonStage={[Function]}
  />
</Flex>
`;

exports[`isMember renders null because its not supposed to be visible 1`] = `""`;

exports[`isMember renders null with no contact assignment for User-Created Org 1`] = `<Flex />`;

exports[`isMember renders with no contact assignment and no contact info 1`] = `
<Flex>
  <Connect(Translate(AssignToMeButton))
    organization={
      Object {
        "id": "50",
      }
    }
    person={
      Object {
        "first_name": "Roge",
        "id": "1002",
      }
    }
  />
  <Flex
    align="center"
    direction="row"
    justify="center"
  >
    <CenteredIconButtonWithText
      icon="textIcon"
      key="some key"
      text="Message"
    />
    <CenteredIconButtonWithText
      icon="callIcon"
      key="some key"
      text="Call"
    />
    <CenteredIconButtonWithText
      buttonStyle={
        Object {
          "fontSize": 20,
        }
      }
      icon="emailIcon"
      key="some key"
      text="Email"
    />
  </Flex>
</Flex>
`;
